add error pages

--- a/fahrasah/templates/fahrasah/remove-repeated-text.html
+++ b/fahrasah/templates/fahrasah/remove-repeated-text.html
@@ -32,7 +32,7 @@
         </td>
         <td>
             <a id="buttonDetails" class="btn btn-primary">تفاصيل</a>
-            <a id="buttonDelete" class="btn btn-danger">حذف</a>
+            <a id="buttonDelete" href="{% url 'fahrasah:remove-repeated-text-record' duplicate.id %}" class="btn btn-danger">حذف</a>
             
         </td>
 
