--- a/fahrasah/templates/fahrasah/edit-field.html
+++ b/fahrasah/templates/fahrasah/edit-field.html
@@ -31,10 +31,20 @@
         </div>
         
         <div class="col-sm-6">
+            {{form.property.label}}
+            {{form.property}}
+        </div>
+
+        
+    </div>
+
+    <br>
+
+    <div class="row">
+        <div class="col-sm-12">
             {{form.reference.label}}
             {{form.reference}}
         </div>
-        
     </div>
 
     <br>
